--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
+    "react-measure": "^0.5.0",
+    "react-motion": "^0.4.4",
     "react-redux": "^4.4.1",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.0",
