--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "feathers-socketio": "^1.4.1",
     "fs-extra": "^0.30.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.15.0",
     "normalize.css": "^4.2.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -43,6 +44,7 @@
     "react-redux": "^4.4.1",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.0",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.23.4",
