--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/app",
   "scripts": {
     "lint": "eslint client",
-    "test": "mocha --compilers js:babel-register,js:./test/setup.js 'test/**/*.spec.js' 'client/components/**/*.spec.js'",
-    "test:tdd": "mocha --compilers js:babel-register,js:./test/setup.js 'test/**/*.spec.js' 'client/components/**/*.spec.js' --watch",
+    "test": "mocha --compilers js:babel-register,js:./test/setup.js './test/**/*.spec.js'",
+    "test:tdd": "mocha --compilers js:babel-register,js:./test/setup.js 'test/**/*.spec.js' --watch",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register,js:./test/setup.js 'test/**/*.spec.js' 'client/components/**/*.spec.js'",
     "build": "babel-node tools/run build --env=production",
     "dev": "babel-node tools/run start --env=development --watch",
