--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:tdd": "mocha --compilers js:babel-register,js:./test/setup.js 'test/**/*.spec.js' --watch",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register,js:./test/setup.js 'test/**/*.spec.js' 'client/components/**/*.spec.js'",
     "build": "babel-node tools/run build --env=production",
-    "dev": "babel-node tools/run start --env=development --watch",
+    "dev": "npm run cleandb && npm run start",
+    "start": "babel-node tools/run start --env=development --watch",
+    "cleandb": "rm -rf server/data",
     "check": "npm run lint && npm run test",
     "validate": "npm ls"
   },
